tooling/nargo_cli/tests/snapshots/execution_success/function_ref/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "c",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "string",
        "length": 3
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _20",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : [_1, _2, _3]",
    "BLACKBOX::RANGE [_0]:1 bits []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (2, _0) 0 ]], outputs: [_4]",
    "EXPR [ (2, _0, _4) (1, _5) -1 ]",
    "EXPR [ (2, _0, _5) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (2, _0) -1 ]], outputs: [_6]",
    "EXPR [ (2, _0, _6) (-1, _6) (1, _7) -1 ]",
    "EXPR [ (2, _0, _7) (-1, _7) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (2, _0) -2 ]], outputs: [_8]",
    "EXPR [ (2, _0, _8) (-2, _8) (1, _9) -1 ]",
    "EXPR [ (2, _0, _9) (-2, _9) 0 ]",
    "EXPR [ (1, _5, _7) (-1, _5) (-1, _7) (-1, _10) 1 ]",
    "EXPR [ (2, _0) (-1, _11) 1 ]",
    "EXPR [ (-1, _9, _10) (1, _10) (-1, _12) 0 ]",
    "EXPR [ (1, _11, _12) (-4, _12) 0 ]",
    "EXPR [ (98, _9, _10) (98, _12) (-1, _13) 0 ]",
    "EXPR [ (97, _9, _10) (97, _12) (-1, _14) 0 ]",
    "EXPR [ (114, _9, _10) (114, _12) (-1, _15) 0 ]",
    "EXPR [ (-1, _5) (-1, _16) 1 ]",
    "EXPR [ (-102, _5, _7) (-1, _20) 0 ]",
    "EXPR [ (1, _10, _13) (102, _7) (-1, _17) (1, _20) 0 ]",
    "EXPR [ (1, _10, _14) (111, _7) (-1, _18) (643771849171743388889600168978155149663187188247530421873476593722817896931, _20) 0 ]",
    "EXPR [ (1, _10, _15) (111, _7) (-1, _19) (643771849171743388889600168978155149663187188247530421873476593722817896931, _20) 0 ]",
    "EXPR [ (-1, _16, _17) (1, _1) (-102, _5) 0 ]",
    "EXPR [ (-1, _16, _18) (1, _2) (-111, _5) 0 ]",
    "EXPR [ (-1, _16, _19) (1, _3) (-111, _5) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
